[package]
name = "slither"
version = "0.1.0"
authors = ["Gus Caplan <me@gus.host>"]
edition = "2018"

[lib]
name = "slither"
path = "src/lib.rs"

[[bin]]
name = "slither"
path = "src/bin.rs"

[[bin]]
name = "slither_repl"
path = "src/repl.rs"

[dependencies.gc]
path = "rust-gc/gc"

[dependencies.gc_derive]
path = "rust-gc/gc_derive"

[dependencies]
clap = "2"
num = "0.2.0"
byteorder = "1.3.1"
indexmap = "1.0.2"
mio = "0.6"
lazy_static = "1.2"
threadpool = "1.7"
num_cpus = "1.10"
regex = "1.1"
rustyline = "3.0.0"
